--- a/UI/css/index.css
+++ b/UI/css/index.css
@@ -3,7 +3,11 @@ body {
     font-size: 1rem;
     font-family: 'Open Sans', sans-serif;
     color: #F5FAF5;
-    background: #5AAF5D;
+    background: #EBFAEC;
+}
+
+header {
+    background: #1F4121;
 }
 
 header h1 {
@@ -15,6 +19,8 @@ header h1 {
 
 main h3 {
     font-size: 2rem;
+    text-align: center;
+    color: black;
 }
 
 main.sign-in {
@@ -47,7 +53,7 @@ main.sign-in {
     margin-bottom: 0.2rem;
     height: 1.5rem;
     border: 2px solid #2B5A2D;
-    border-radius: 0.3rem;
+    border-radius: 0.5rem;
     padding: 0.2rem;
 }
 
@@ -66,3 +72,17 @@ main.sign-in {
     cursor: pointer;
 }
     
+.sign-up .form {
+    max-width: 55rem;
+    width: 70%;
+    margin: 0 auto;
+    padding: 4rem;
+    margin-bottom: 5rem;
+    text-align: center;
+}
+
+.sign-up form input {
+    width: 90%;
+    border-radius: 0.5rem;
+    margin-bottom: 1rem;
+}
