--- a/UI/css/index.css
+++ b/UI/css/index.css
@@ -125,10 +125,36 @@ main.sign-in, main.sign-up, main.reset {
     color: white;
 }
 
+.register h3 {
+    text-align: left;
+    padding-left: 1rem;
+}
+
+.register form {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    padding-left: 1rem;
+    padding-bottom: 5rem;
+}
+
+.register form select, button {
+    width: 18rem;
+    height: 2rem;
+    margin-bottom: 1rem;
+    font-size: 1rem;
+    border: 1px solid #0F120D;
+    border-radius: 0.5rem;
+}
+
+.register form button {
+    background: #0F120D;
+    color: #F5FAF5;
+}
+
 footer {
     font-family: 'Dosis', sans-serif;
     margin: 0 auto;
-    margin-top: 5rem;
     border-top: 1px solid #1F4121;
     width: 85%;
     color: #0F120D;
@@ -151,5 +177,9 @@ footer {
         width: 90%;
         border-radius: 0.5rem;
         margin-bottom: 1rem;
+    } 
+    
+    header ul li a {
+        padding-right: 2rem;
     }
 }
