--- a/UI/css/index.css
+++ b/UI/css/index.css
@@ -1,9 +1,21 @@
+html {
+    height: 100%;
+}
+
 body {
+    min-height: 100%;
+    position: relative;
     margin: 0;
     font-size: 1rem;
     font-family: 'Open Sans', sans-serif;
     color: #F5FAF5;
     background: url('../img/circles-light.png');
+}
+
+body::after {
+    content: '';
+    display: block;
+    height: 3.5rem;
 }
 
 header {
@@ -216,6 +228,11 @@ section article form button {
 }
 
 footer {
+    position: absolute;
+    bottom: 0;
+    right: 0;
+    left: 0;
+    height: 4.5rem;
     font-family: 'Dosis', sans-serif;
     margin: 0 auto;
     border-top: 1px solid #1F4121;
