--- a/css/index.css
+++ b/css/index.css
@@ -66,6 +66,7 @@ main h4 {
     background: #DBE6DF;
     font-size: 2rem;
     padding: 2rem;
+    text-align: center;
     margin-top: 5rem;
     border-radius: 1rem;
     max-width: 55rem;
