ft(create-party) Consume the create party API - Consume the create party API - The API creates political parties and is available to admins alone [Delivers #164085450]

--- a/css/index.css
+++ b/css/index.css
@@ -564,6 +564,12 @@ footer {
   cursor: pointer;
 }
 
+.adminAlert {
+    padding: 0.5rem;
+    color: red;
+    font-weight: bold;
+}
+
 /* for tablet and desktop */
 @media only screen and (min-width: 767px) {
     
