--- a/css/index.css
+++ b/css/index.css
@@ -571,6 +571,16 @@ footer {
     font-weight: bold;
 }
 
+.editPartyForm .edit {
+    border: 2px solid red;
+    border-radius: 0;
+    height: 1.6rem;
+}
+
+.editButton {
+    border: 2px solid red;
+    border-radius: 0;
+}
 
 /* for tablet and desktop */
 @media only screen and (min-width: 767px) {
