--- a/css/index.css
+++ b/css/index.css
@@ -571,15 +571,25 @@ footer {
     font-weight: bold;
 }
 
+.editPartyForm {
+    height: 3rem;
+}
+
 .editPartyForm .edit {
-    border: 2px solid red;
+    border: 1px solid black;
     border-radius: 0;
-    height: 1.6rem;
+    height: 1.75rem;
 }
 
 .editButton {
-    border: 2px solid red;
+    border: 1px solid black;
     border-radius: 0;
+    width: 5rem;
+    cursor: pointer;
+}
+
+.editInfo {
+    color: red;
 }
 
 /* for tablet and desktop */
