ft(improve UI) Improve the UI and remove unwanted elements - Removes the pagination - Adds the logout feature [Delivers #164296863]

--- a/css/index.css
+++ b/css/index.css
@@ -538,7 +538,7 @@ footer {
 }
 
 .dropdownSecondary {
-	display: none;
+	/* display: none; */
 	background: #DBE6DF;
 	z-index: 5;
 	border-radius: 0.2rem;
@@ -558,13 +558,13 @@ footer {
     font-size: 0.8rem;
 }
 
-.dropdown:active, .dropdown:hover .dropdownSecondary {
+/* .dropdown:active, .dropdown:hover .dropdownSecondary {
 	display: block;
 }
 
 .dropdown:active, .dropdownSecondary:hover {
 	display: block;
-}
+} */
 
 .hidden {
   display: none;
